server/error.txt
Output.java:1: error: reached end of file while parsing
asdfs
^
1 error
